--- a/meas/meas.cabal
+++ b/meas/meas.cabal
@@ -37,6 +37,53 @@ source-repository head
 --  default-language: Haskell2010
 
 
+library
+  hs-source-dirs:
+      src
+  build-depends:
+    base >=4.7 && <5
+    , containers
+    , Decimal
+    , QuickCheck
+    , mtl
+    , aeson
+    , bytestring
+    , cassava
+    , containers
+    , Decimal
+    , deepseq
+    , lens
+    , mtl
+    , QuickCheck
+    , HUnit
+    , http-client
+    , http-conduit
+    , monad-logger
+    , QuickCheck
+    , split
+    , old-locale
+    , test-framework
+    , test-framework-hunit
+    , test-framework-quickcheck2
+    , text
+    , text-conversions
+    , time
+    , vector
+    , xml-to-json-fast
+  exposed-modules:
+      Meas.Extract.Efficiency
+      Meas.Extract.Issue
+      Meas.Extract.Misc
+      Meas.Extract.Report
+      Meas.Extract.State
+      Meas.Extract.Types
+      Meas.Extractor
+      Meas.YouTrack.Parser
+      Meas.YouTrack.Queries
+  other-modules:
+  default-language: Haskell2010
+  ghc-options:         -Wall
+
 
 executable meas
   main-is: Meas.hs
@@ -45,6 +92,7 @@ executable meas
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , meas
     , aeson
     , bytestring
     , cassava
@@ -73,3 +121,4 @@ executable meas
   other-modules:
       Paths_meas
   default-language: Haskell2010
+  ghc-options:         -Wall
