--- a/planning/planning.cabal
+++ b/planning/planning.cabal
@@ -4,11 +4,11 @@
 --
 -- hash: f890efc6b0045192cf4c0ad3eac28d97955c6c0d729472203b71ac00d99d89b4
 
-name:           gtsim
+name:           planning
 version:        0.1.0.0
-description:    Please see the README on GitHub at <https://github.com/githubuser/gtsim#readme>
-homepage:       https://github.com/githubuser/gtsim#readme
-bug-reports:    https://github.com/githubuser/gtsim/issues
+description:    Please see the README on GitHub at <https://github.com/githubuser/planning#readme>
+homepage:       https://github.com/githubuser/planning#readme
+bug-reports:    https://github.com/githubuser/planning/issues
 author:         Author name here
 maintainer:     example@example.com
 copyright:      2018 Author name here
@@ -23,33 +23,59 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/githubuser/gtsim
+  location: https://github.com/githubuser/planning
 
 library
   hs-source-dirs:
       src
   build-depends:
     base >=4.7 && <5
+    , gtsim
+    , meas
+
     , containers
     , Decimal
     , QuickCheck
     , monad-par
     , monad-par-extras
     , mtl
+    , text
+    , time
     , tf-random
 
   exposed-modules:
-      Gtsim.Types
-      Gtsim.Simulator
-      Gtsim.Invariants
+      Planning.Loader
+      Planning.Processing
   other-modules:
---      Paths_gtsim
+--      Paths_planning
   default-language: Haskell2010
   ghc-options:         -Wall
 
 
+executable planning-exe
+  main-is: Main.hs
+  hs-source-dirs:
+      app
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      base >=4.7 && <5
+    , planning
+    , gtsim
+    , meas
 
-test-suite gtsim-test
+    , containers
+    , Decimal
+    , mtl
+    , QuickCheck
+    , HUnit
+    , monad-logger
+
+  other-modules:
+      Paths_planning
+  default-language: Haskell2010
+
+
+test-suite planning-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   hs-source-dirs:
@@ -66,8 +92,8 @@ test-suite gtsim-test
     , test-framework-quickcheck2
 
   other-modules:
-      Paths_gtsim
-      Test.Gtsim.Simulator
+--      Paths_planning
+      Test.Planning.Simulator
   default-language: Haskell2010
   ghc-options:         -Wall
 
