[CO-340] add support for fetching all PR data from github

--- a/GHStats/stack.yaml
+++ b/GHStats/stack.yaml
@@ -35,11 +35,12 @@ resolver: lts-12.0
 # A package marked 'extra-dep: true' will only be built if demanded by a
 # non-dependency (i.e. a user package), and its test suites and benchmarks
 # will not be run. This is useful for tweaking upstream packages.
-packages:
-- .
+# packams:
+
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
 # extra-deps: []
+
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
