[CO-340] fixed compilation bug

--- a/GHStats/GHStats.cabal
+++ b/GHStats/GHStats.cabal
@@ -36,6 +36,7 @@ library
     , http-conduit
     , text
     , time
+    , optparse-applicative
     , unordered-containers
   exposed-modules:
       Extract
