--- a/GHStats/GHStats.cabal
+++ b/GHStats/GHStats.cabal
@@ -41,12 +41,14 @@ library
     , optparse-applicative
     , containers
     , unordered-containers
+    , meas
   exposed-modules:
       Extract
       Report
       Types
       Regex
       Misc
+      YtIntegration
   other-modules:
       Paths_GHStats
   default-language: Haskell2010
@@ -69,6 +71,7 @@ executable GHStats-exe
     , text-format
     , regex-tdfa
     , unordered-containers
+    , meas
   other-modules:
       Paths_GHStats
   default-language: Haskell2010
