--- a/stack.yaml
+++ b/stack.yaml
@@ -39,6 +39,7 @@ packages:
 - gtsim
 - meas
 - planning
+- GHStats
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
 extra-deps: []
