Add single issue parser and GH query

--- a/cycletimes/cycletimes.cabal
+++ b/cycletimes/cycletimes.cabal
@@ -27,6 +27,8 @@ source-repository head
 library
   exposed-modules:
       Misc
+      Parser
+      Queries
       Types
   other-modules:
       Paths_cycletimes
