--- a/cycletimes/cycletimes.cabal
+++ b/cycletimes/cycletimes.cabal
@@ -26,9 +26,13 @@ source-repository head
 
 library
   exposed-modules:
+      Assignee
+      Config
+      Issue
       Misc
       Parser
       Queries
+      Report.Assignees
       Types
   other-modules:
       Paths_cycletimes
@@ -39,11 +43,13 @@ library
     , base >=4.7 && <5
     , bytestring
     , cassava
+    , containers
     , http-conduit
     , optparse-applicative
     , text
     , time
     , vector
+    , yaml
   default-language: Haskell2010
 
 executable cycletimes-exe
