minor change: added StateTransitions to same state

--- a/cycletimes/cycletimes.cabal
+++ b/cycletimes/cycletimes.cabal
@@ -34,6 +34,7 @@ library
       GH.Queries
       GH.Report.Assignees
       GH.Types
+      GH.StateTransition
   other-modules:
       Paths_cycletimes
   hs-source-dirs:
