--- a/GHStats/GHStats.cabal
+++ b/GHStats/GHStats.cabal
@@ -20,6 +20,8 @@ cabal-version:  >= 1.10
 extra-source-files:
     ChangeLog.md
     README.md
+Data-Files:
+    extraData/queryPullRequestAll
 
 source-repository head
   type: git
@@ -29,26 +31,28 @@ library
   hs-source-dirs:
       src
   build-depends:
-      aeson
-    , base >=4.7 && <5
+      base >=4.7 && <5
+    , aeson
+    , array
     , bytestring
     , cassava
-    , http-conduit
-    , text
-    , regex-tdfa
-    , time
-    , array
-    , optparse-applicative
     , containers
+    , http-conduit
+    , MissingH
+    , optparse-applicative
+    , regex-tdfa
+    , text
+    , time
     , unordered-containers
     , meas
   exposed-modules:
-      Extract
-      Report
-      Types
-      Regex
-      Misc
-      YtIntegration
+      PR.Extract
+      PR.Misc
+      PR.Pr
+      PR.Regex
+      PR.Report
+      PR.Types
+      PR.YtIntegration
   other-modules:
       Paths_GHStats
   default-language: Haskell2010
@@ -63,13 +67,13 @@ executable GHStats-exe
     , GHStats
     , aeson
     , bytestring
+    , filepath
     , http-conduit
     , MissingH
     , optparse-applicative
-    , filepath
+    , regex-tdfa
     , text
     , text-format
-    , regex-tdfa
     , unordered-containers
     , meas
   other-modules:
