Implementing get parent epic for Issue

--- a/cycletimes/cycletimes.cabal
+++ b/cycletimes/cycletimes.cabal
@@ -37,6 +37,7 @@ library
       GH.Report.Assignees
       GH.Report.StateTransition
       GH.Types
+      GH.Epic
   other-modules:
       Paths_cycletimes
   hs-source-dirs:
