fix bug in real Name mapping and hardcoded the data

--- a/cycletimes/cycletimes.cabal
+++ b/cycletimes/cycletimes.cabal
@@ -39,6 +39,7 @@ library
       GH.Report.StateTransition
       GH.Types
       GH.Epic
+      GH.DevNames
   other-modules:
       Paths_cycletimes
   hs-source-dirs:
